# icey_pudding

./: CHANGELOG.md  Cargo.toml  README.md  coloring.txt  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: conductors.rs  constructors.rs  entities.rs  handlers.rs  lib.rs  main.rs  repositories.rs  utils.rs
src/cmds/: mod.rs  parser.rs
src/conductors/: appcmd.rs  clap.yml  clapcmd.rs  command_colors.rs  command_strs.rs  helper.rs  helpers.rs  macros.rs  mod.rs
src/controllers/: content.rs  mod.rs  user.rs
src/controllers/ret/: content.rs  user.rs
src/controllers/serenity/: content.rs  mod.rs  user.rs
src/handlers/: helpers.rs  mod.rs
src/interactors/: content.rs  mod.rs  user.rs
src/presenters/: content.rs  user.rs
src/presenters/impls/: mod.rs
src/presenters/impls/ret/: content.rs  user.rs
src/presenters/impls/serenity/: content.rs  mod.rs  user.rs
src/repositories/: mock.rs  mod.rs  mongo.rs
src/repositories/mock/: helpers.rs  mod.rs
src/repositories/mongo/: converters.rs  helpers.rs  mod.rs  models.rs  type_convert.rs
src/usecases/: content.rs  mod.rs  user.rs
