[package]
name = "icey_pudding"
version = "0.1.0"
edition = "2018"
authors = ["Nanai10a (github.com/Nanai10a)"]

[dependencies]
mongodb = "2.2.2"
clap = "3.2.8"
serde_json = "1.0.82"
async-trait = "0.1.56"
async-recursion = "1.0.0"
chrono = "0.4.19"
smallvec = "1.9.0"
anyhow = "1.0.58"
regex = "1.5.6"
shell-words = "1.1.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[dependencies.range_parser]
git = "https://github.com/Nanai10a/range_parser"
