[package]
name = "icey_pudding"
version = "0.1.1"
edition = "2021"
authors = ["Nanai10a (github.com/Nanai10a)"]

[dependencies]
mongodb = "2.2.2"
serde_json = "1.0.82"
async-trait = "0.1.56"
async-recursion = "1.0.0"
chrono = "0.4.19"
smallvec = "1.9.0"
anyhow = "1.0.58"
regex = "1.5.6"
shell-words = "1.1.0"
tracing = "0.1.35"

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.tokio]
version = "1.20.4"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["std", "env-filter"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "serde"]

[dependencies.clap]
version = "3.2.8"
default-features = false
features = ["std", "derive"]

[dependencies.range_parser]
git = "https://github.com/Nanai10a/range_parser"
