[package]
name = "icey_pudding"
version = "0.1.1"
edition = "2021"
authors = ["Nanai10a (github.com/Nanai10a)"]

[dependencies]
mongodb = "2.3.1"
serde_json = "1.0.93"
async-trait = "0.1.64"
async-recursion = "1.0.2"
chrono = "0.4.23"
smallvec = "1.10.0"
anyhow = "1.0.69"
regex = "1.7.1"
shell-words = "1.1.0"
tracing = "0.1.37"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["std", "env-filter"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "serde"]

[dependencies.clap]
version = "3.2.23"
default-features = false
features = ["std", "derive"]

[dependencies.range_parser]
git = "https://github.com/Nanai10a/range_parser"
